# how-to-python

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/lib_template/: __init__.py  math.py
src/lib_template/exponents/: helper.py
src/lib_template/multiplication/: helper.py
